--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         
         <ul>
-          <li><a href="#">Kohlezeichnungen</a></li>
+          <li><a href="kohlezeichnungen.html">Kohlezeichnungen</a></li>
           <li><a href="#">Postkarten</a></li>
           <li><a href="#">Sonstiges</a></li>
         </ul>
