--- a/kohlezeichnungen.html
+++ b/kohlezeichnungen.html
@@ -29,61 +29,92 @@
           <!-- Bild 1 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55874-min.jpg" alt="Werk 1">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 1 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/Unbenannt-15-min.jpg" alt="Werk 1">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
          <!-- Bild 2 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55877-min.jpg" alt="Werk 3">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure> 
             <!-- Bild 3 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55875-min.jpg" alt="Werk 2">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 4 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/Unbenannt-152-2.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
           <!-- Bild 4 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55895-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
           <!-- Bild 5 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55880-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 6 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55884-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
           <!-- Bild 7 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55878-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 8 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55888-min.jpg" alt="Werk 4">
+            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+          </figure>
+
+            <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55873-min.jpg" alt="Werk 4">
+            <figcaption>Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+          </figure>
+
+            <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55876-min.jpg" alt="Werk 4">
             <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
+
+            <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55889-min.jpg" alt="Werk 4">
+            <figcaption>Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+          </figure>
+
+            <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55890-min.jpg" alt="Werk 4">
+            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+          </figure>
+
+            <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55891-min.jpg" alt="Werk 4">
+            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+          </figure>
+
         </div>
       </section>
     </article>
