--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <h1>Portfolio Pauline Seemann</h1>
+    <h1>Pauline Seemann</h1>
     <nav>
       <ul>
         <li><a href="#about">Über mich</a></li>
-        <li><a href="#gallery">Galerie</a></li>
+        <li><a href="#gallery">Galerie Übersicht</a></li>
         <li><a href="#contact">Kontakt</a></li>
       </ul>
     </nav>
@@ -56,13 +56,13 @@
     <article>
       <section id="contact">
         <h2 class="secondtitle">Kontakt</h2>
-        <p>Du möchtest mit mir in Kontakt treten? Schreibe mir gerne eine E-Mail an <a href="mailto:pauline.seemann@gmx.de">pauline.seemann@gmx.de</a> oder eine DM über Instagram @ppauline.s.</p>
+        <p>Du möchtest mit mir in Kontakt treten? Schreibe mir gerne eine E-Mail an pauline.seemann@gmx.de oder eine DM über Instagram @ppauline.s.</p>
       </section>
     </article>
   </main>
 
   <footer>
-    <p>&copy; 2025 Pauline Seemann – Portfolio</p>
+    <p>&copy; 2025 Pauline Seemann </p>
   </footer>
 </body>
 </html>
