--- a/kohlezeichnungen.html
+++ b/kohlezeichnungen.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Galerie – Kunst Portfolio</title>
+  <title>Kohlezeichnungen</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -121,7 +121,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Pauline Seemann – Portfolio</p>
+    <p>&copy; 2025 Pauline Seemann</p>
   </footer>
 </body>
 </html>
