--- a/sonstiges.html
+++ b/sonstiges.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Postkarten</title>
+  <title>Sonstiges</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Postkarten</h1>
+    <h1>Sonstiges</h1>
     <nav>
       <ul>
         <li><a href="index.html#about">Über mich</a></li>
@@ -23,19 +23,14 @@
     <article>
       <section id="gallery-detail">
         
-        <p>Hier findest du eine Auswahl meiner Postkarten. Alle Werke sind käuflich zu erwerben.</p>
+        <p>Hier findest du eine Auswahl meiner sonstigen Werke. Alle Werke sind käuflich zu erwerben.</p>
 
         <div class="gallery-list">
          
  <!-- Bild 1 -->
           <figure>
-            <img src="https://paulineseemann.github.io/kunst-portfolio/Uni-Kiosk Projekt.jpg" alt="Werk 1">
-            <figcaption>"Blumen, die nicht verwelken", A6, 2€</figcaption>
-          </figure>
- <!-- Bild 1 -->
-          <figure>
-            <img src="https://paulineseemann.github.io/kunst-portfolio/Uni-Kiosk Projekt2.jpg" alt="Werk 1">
-            <figcaption>"Blumen, die nicht verwelken", A6, 2€</figcaption>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/" alt="Noch leer">
+            <figcaption></figcaption>
           </figure>
 
         </div>
