--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <article>
       <section id="gallery">
         <h2 class="secondtitle">Galerie</h2>
-        <p>Ein kleiner Überblick über meine Arbeiten – die gesamte Auswahl findest du in den Kategorien unten.</p>
+        <p>Ein kleiner Überblick über meine Arbeiten – die gesamte Auswahl findest du in den drei Kategorien unten.</p>
         
         <div class="gallery-grid">
           <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55874-min.jpg" alt="Bild 1">
@@ -45,9 +45,9 @@
         </div>
         
         <ul>
-          <li><a href="kohlezeichnungen.html">Kohlezeichnungen</a></li>
-          <li><a href="#">Postkarten</a></li>
-          <li><a href="#">Sonstiges</a></li>
+          <li><a href="kohlezeichnungen.html">1. Kohlezeichnungen</a></li>
+          <li><a href="postkarten.html">2. Postkarten</a></li>
+          <li><a href="sonstiges.html">3. Sonstiges</a></li>
         </ul>
       </section>
     </article>
