--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Galerie -->
     <article>
       <section id="gallery">
-        <h2 class="secondtitle">Galerie</h2>
+        <h2 class="secondtitle">Galerie Übersicht</h2>
        
         
         <div class="gallery-grid">
