--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
           <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55877-min.jpg" alt="Bild 3">
           <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55895-min.jpg" alt="Bild 4">
         </div>
-         <p>Ein kleiner Überblick über meine Arbeiten – die gesamte Auswahl findest du in diesen drei Kategorien:</p>
+         <p>Ein kleiner Überblick über meine Arbeiten – die gesamte Auswahl findest du in diesen zwei Kategorien:</p>
         <ul>
           <li><a href="kohlezeichnungen.html">1. Kohlezeichnungen</a></li>
           <li><a href="postkarten.html">2. Postkarten</a></li>
-          <li><a href="sonstiges.html">3. Sonstiges</a></li>
+          
         </ul>
       </section>
     </article>
