--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 class="secondtitle">Über mich</h2>
         <p>
           Hi, ich bin Pauline Seemann und studiere Visuelle Kommunikation an der Hochschule für Bildende Künste Braunschweig.
-          Auf dieser Seite zeige ich Arbeiten, die in den letzten Jahren entstanden sind – vor allem Kohlezeichnungen, aber auch kleinere Projekte wie Postkarten und Hefte.
+          Auf dieser Seite zeige ich Arbeiten, die in den letzten Jahren entstanden sind – vor allem Kohlezeichnungen, aber auch kleinere Projekte wie Postkarten.
           <br>Alle gezeigten Werke können erworben werden. Bei Interesse freue ich mich über eine Nachricht.
         </p>
       </section>
