--- a/kohlezeichnungen.html
+++ b/kohlezeichnungen.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Kohle</h1>
+    <h1>Kohlezeichnungen</h1>
     <nav>
       <ul>
         <li><a href="index.html#about">Über mich</a></li>
