--- a/kohlezeichnungen.html
+++ b/kohlezeichnungen.html
@@ -29,91 +29,105 @@
           <!-- Bild 1 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55874-min.jpg" alt="Werk 1">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>1. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 1 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/Unbenannt-15-min.jpg" alt="Werk 1">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>2. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
          <!-- Bild 2 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55877-min.jpg" alt="Werk 3">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>3. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure> 
             <!-- Bild 3 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55875-min.jpg" alt="Werk 2">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>4. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 4 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/Unbenannt-152-2.jpg" alt="Werk 4">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>5. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
           <!-- Bild 4 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55895-min.jpg" alt="Werk 4">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>6. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
           <!-- Bild 5 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55880-min.jpg" alt="Werk 4">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>7. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 6 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55884-min.jpg" alt="Werk 4">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>8. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
           <!-- Bild 7 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55878-min.jpg" alt="Werk 4">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>9. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
           <!-- Bild 8 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55888-min.jpg" alt="Werk 4">
-            <figcaption>"Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>10. "Kaffee mit Kohle", Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
             <!-- Bild 8 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55873-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>11. Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
-            <!-- Bild 8 -->
-          <figure>
-            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55876-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
-          </figure>
- <!-- Bild 8 -->
-          <figure>
-            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55891-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
-          </figure>
+  
 
             <!-- Bild 8 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55889-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €, SOLD</figcaption>
+            <figcaption>12. Kohlezeichnung, A2, 200 €, SOLD</figcaption>
           </figure>
 
             <!-- Bild 8 -->
           <figure>
             <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55890-min.jpg" alt="Werk 4">
-            <figcaption>Kohlezeichnung, A2, 200 €</figcaption>
+            <figcaption>13. Kohlezeichnung, A2, 200 €</figcaption>
+          </figure>         
+
+ <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55891-min.jpg" alt="Werk 4">
+            <figcaption>14. Kohlezeichnung, A2, 200 €</figcaption>
           </figure>
 
+           <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55893-min.jpg" alt="Werk 4">
+            <figcaption>15. Kohlezeichnung, A2, 200 €</figcaption>
+          </figure>
+
+ <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55876-min.jpg" alt="Werk 4">
+            <figcaption>16. Kohlezeichnung, A2, 200 €</figcaption>
+          </figure>
+
+           <!-- Bild 8 -->
+          <figure>
+            <img src="https://paulineseemann.github.io/kunst-portfolio/250507_agatha55892-min.jpg" alt="Werk 4">
+            <figcaption>17. Kohlezeichnung, A2, 200 €</figcaption>
+          </figure>
            
         </div>
       </section>
