--- a/postkarten.html
+++ b/postkarten.html
@@ -29,12 +29,13 @@
          
  <!-- Bild 1 -->
           <figure>
-            <img src="https://paulineseemann.github.io/kunst-portfolio/Uni-Kiosk Projekt.jpg" alt="Werk 1">
+            <img src="https://paulineseemann.github.io/kunst-portfolio/Uni-Kiosk Projekt-min.jpg" alt="Werk 1">
             <figcaption>"Blumen, die nicht verwelken", A6, 2€</figcaption>
           </figure>
+          
  <!-- Bild 1 -->
           <figure>
-            <img src="https://paulineseemann.github.io/kunst-portfolio/Uni-Kiosk Projekt2.jpg" alt="Werk 1">
+            <img src="https://paulineseemann.github.io/kunst-portfolio/Uni-Kiosk Projekt2-min.jpg" alt="Werk 1">
             <figcaption>"Blumen, die nicht verwelken", A6, 2€</figcaption>
           </figure>
 
