--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
          <p>Ein kleiner Überblick über meine Arbeiten – die gesamte Auswahl findest du in diesen zwei Kategorien:</p>
         <ul>
-          <li><a href="kohlezeichnungen.html">1. Kohlezeichnungen</a></li>
+          <li><a href="kohlezeichnungen.html">1. Kohlearbeiten</a></li>
           <li><a href="postkarten.html">2. Postkarten</a></li>
           
         </ul>
